--- a/WhdxWeb/model/extendLearning/extendLearning_detail.html
+++ b/WhdxWeb/model/extendLearning/extendLearning_detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=9;IE=10;IE=11;IE=edge" />
-    <title>拓展学习 详情</title>
+    <title>数学思维 详情</title>
     <link href="../../static/image/sprite/i_logoico1.ico" rel="shortcut icon">
     <link rel="stylesheet" href="../../static/style/common.css">
     <link rel="stylesheet" href="../../static/style/me/me.css">
