--- a/WhdxWeb/model/homework/hj_edit.html
+++ b/WhdxWeb/model/homework/hj_edit.html
@@ -41,6 +41,9 @@
             </div>
             <!-- 作业、测试详情结束 -->
         </div>
+        <div class="data_Popup dino h_load" id="h_load">
+            <div class="h_loadding" >加载中。。。</div>
+        </div>
     </div>
 </article>
 <script src="../../static/plugin/BCScript/hj.js"></script>
