--- a/WhdxWeb/model/test/hj_publish.html
+++ b/WhdxWeb/model/test/hj_publish.html
@@ -37,7 +37,7 @@
                 <div class="hj_Type">
                     <!-- 块 -->
                     <dl>
-                        <dt>名师推荐：</dt>
+                        <dt>测试类型：</dt>
                         <dd>
                             <div class="h_Type_ul">
 
