--- a/WhdxWeb/student/model/me/me_print.html
+++ b/WhdxWeb/student/model/me/me_print.html
@@ -20,6 +20,7 @@
         <p class="m_PrintBtn" id="m_PrintBtn">确认打印</p>
         <ul class="m_PrintCon" id="m_PrintCon"></ul>
     </div>
+    <div id="m_printDiv"></div>
 </div>
 <script src="../../static/javascript/me/me_print.js"></script>
 <!-- ↓latex公式解析↓ -->
