--- a/WhdxWeb/model/extendLearning/extendLearning_index.html
+++ b/WhdxWeb/model/extendLearning/extendLearning_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=9;IE=10;IE=11;IE=edge" />
-    <title>拓展学习</title>
+    <title>数学思维</title>
     <link href="../../static/image/sprite/i_logoico1.ico" rel="shortcut icon">
     <link rel="stylesheet" href="../../static/style/common.css">
     <link rel="stylesheet" href="../../static/style/me/me.css">
@@ -30,7 +30,7 @@
                     <!--面包屑导航-->
                     <ul class="c_Crum fl" id="c_Crum">
                         <li><a href="../../model/index/indexX.html" class="fl ">首页</a><i class="spriteImg c_Crumgoico c_Crumgo"></i></li>
-                        <li class="fc65">拓展学习</li>
+                        <li class="fc65">数学思维</li>
                     </ul>
                 </div>
             </div>
