--- a/WhdxWeb/model/test/hj_edit.html
+++ b/WhdxWeb/model/test/hj_edit.html
@@ -55,6 +55,9 @@
                 </div>
             </div>
         </div>
+        <div class="data_Popup dino h_load" id="h_load">
+            <div class="h_loadding" >加载中。。。</div>
+        </div>
     </div>
 </article>
 <script src="../../static/plugin/BCScript/hj.js"></script>
