--- a/WhdxWeb/student/model/extendLearning/extendLearning_index.html
+++ b/WhdxWeb/student/model/extendLearning/extendLearning_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=9;IE=10;IE=11;IE=edge" />
-    <title>拓展学习</title>
+    <title>数学思维</title>
     <link href="../../static/image/sprite/i_logoico1.ico" rel="shortcut icon">
     <link rel="stylesheet" href="../../static/style/common.css">
     <link rel="stylesheet" href="../../static/style/extendLearning/extendLearning_index.css">
@@ -18,7 +18,7 @@
         <i class="ArrowsFont Com_IndexIco" >&#xe610;</i>
         <a  href="../../../student/model/index/index.html">首页</a>
         <i class="ArrowsFont Com_NextIco">&#xe603;</i>
-        <span class="fl fc49">拓展学习</span>
+        <span class="fl fc49">数学思维</span>
     </div>
 </div>
 <!--首页内容区-->
